--- a/index.html
+++ b/index.html
@@ -18,29 +18,29 @@
 
 <body>
 
+
+    <!--navbar-->
     <div class="nav flex-box">
 
         <div class="logo">
             <img src="./image/logo-small.png" alt="logo">
         </div>
 
+        <!--navbar-menu-->
         <div class="menu flex-box">
 
             <div class="menu-box menu-left">
                 <ul class="flex-box">
-                    <li>Perche Dropbox
+                    <li>Perch&#232 Dropbox
+                        <!--menu-dropdown-->
                         <div class="dropdown flex-box">
                             <ul>
                                 <li>Test</li>
                                 <li>Test</li>
                                 <li>Test</li>
                                 <li>Test</li>
-                                <li>Test</li>
-                                <li>Test</li>
                             </ul>
                             <ul>
-                                <li>Test</li>
-                                <li>Test</li>
                                 <li>Test</li>
                                 <li>Test</li>
                                 <li>Test</li>
@@ -59,8 +59,6 @@
                                 <li>Test</li>
                             </ul>
                             <ul>
-                                <li>Test</li>
-                                <li>Test</li>
                                 <li>Test</li>
                                 <li>Test</li>
                                 <li>Test</li>
@@ -97,10 +95,12 @@
 
     <div class="overlay"></div>
 
+
+    <!--hero-image/section/anchor-->
     <div class="hero">
 
         <div class="hero-box">
-            <h1>Tutto cio che ti serve per il <br> lavoro, in un unico posto</h1>
+            <h1>Tutto ci&#242 che ti serve per il <br> lavoro, in un unico posto</h1>
 
             <div class="hero-box-section flex-box">
 
@@ -108,7 +108,8 @@
 
                     <p>
                         Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accesibili dallo stesso posto.
-                        Dropbox Business e piu di uno spazio di archiviazione sicuro: e un modo intelligente e integrato
+                        Dropbox Business &#232 piu di uno spazio di archiviazione sicuro: &#232 un modo intelligente e
+                        integrato
                         per ottimizzare il flusso di lavoro esistemte.
                     </p>
 
@@ -135,13 +136,16 @@
     </div>
 
 
+
+    <!--main-container/plan-section/partner/cards-->
     <div class="main-container">
 
+        <!--anchro link-->
         <div id="main-link">
         </div>
 
         <h2>Trova il business che fa per te</h2>
-
+        <!--radio section-->
         <div class="select">
             <form action="">
                 <input type="radio" id="mensile" name="radio">
@@ -152,6 +156,8 @@
             </form>
         </div>
 
+
+        <!--plan-section-->
         <div class="plan-box flex-box">
 
             <div class="plan">
@@ -214,7 +220,7 @@
 
                         <div class="feature-item flex-box">
                             <i class="fa-solid fa-check"></i>
-                            <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                            <span>Cartelle offline su dispositivi mobili</span>
                         </div>
 
                     </div>
@@ -245,17 +251,20 @@
 
                         <div class="plan-content-item" flex-box>
                             <i class="fa-solid fa-user"></i>
-                            <span>1 utente</span>
+                            <span>3 o pi&#249 utenti</span>
                         </div>
 
                         <div class="plan-content-item flex-box">
                             <i class="fa-solid fa-folder"></i>
-                            <span>5 TB di psazio di archiviazione sicuro</span>
+                            <span>Tutto lo spazio di cui ha bisogno il tuo team</span>
                         </div>
 
                         <div class="plan-content-item flex-box">
                             <i class="fa-solid fa-share-nodes"></i>
-                            <span>Funzioni di produttivita premium e condivisione file semplice</span>
+                            <span>
+                                Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo
+                                team
+                            </span>
                         </div>
 
                     </div>
@@ -278,27 +287,27 @@
 
                         <div class="feature-item flex-box">
                             <i class="fa-solid fa-check"></i>
-                            <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                            <span>Nessun limite di spazio per i file</span>
                         </div>
 
                         <div class="feature-item flex-box">
                             <i class="fa-solid fa-check"></i>
-                            <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                            <span>Cartelle offline per dispositivi mobili</span>
                         </div>
 
                         <div class="feature-item flex-box">
                             <i class="fa-solid fa-check"></i>
-                            <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                            <span>Risparmio del 50% rispetto alle iscrizioni singole</span>
                         </div>
 
                         <div class="feature-item flex-box">
                             <i class="fa-solid fa-check"></i>
-                            <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                            <span>Possibilit&#224 di inserire nuovi membri del team</span>
                         </div>
 
                         <div class="feature-item flex-box">
                             <i class="fa-solid fa-check"></i>
-                            <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                            <span>Gestione dei permessi in base ai ruoli</span>
                         </div>
 
                     </div>
@@ -331,17 +340,20 @@
 
                         <div class="plan-content-item" flex-box>
                             <i class="fa-solid fa-user"></i>
-                            <span>1 utente</span>
+                            <span>10 o pi&#249 utenti</span>
                         </div>
 
                         <div class="plan-content-item flex-box">
                             <i class="fa-solid fa-folder"></i>
-                            <span>5 TB di psazio di archiviazione sicuro</span>
+                            <span>Soluzioni oersonalizzabili per la tua azienda</span>
                         </div>
 
                         <div class="plan-content-item flex-box">
                             <i class="fa-solid fa-share-nodes"></i>
-                            <span>Funzioni di produttivita premium e condivisione file semplice</span>
+                            <span>
+                                Assistenza personalizzata per aiutare gli amministratori in una gestione su larga
+                                scala
+                            </span>
                         </div>
 
                     </div>
@@ -364,17 +376,17 @@
 
                         <div class="feature-item flex-box">
                             <i class="fa-solid fa-check"></i>
-                            <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                            <span>Cartelle offline su dispositivi mobili</span>
                         </div>
 
                         <div class="feature-item flex-box">
                             <i class="fa-solid fa-check"></i>
-                            <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                            <span>Servizio assistenza 24/h</span>
                         </div>
 
                         <div class="feature-item flex-box">
                             <i class="fa-solid fa-check"></i>
-                            <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                            <span>Possibilit&#224 di personalizzazione totale</span>
                         </div>
 
                     </div>
@@ -417,6 +429,8 @@
 
         </div>
 
+
+        <!--partner-section-->
         <div class="partner-box flex-box">
 
             <div class="partner-image">
@@ -430,7 +444,7 @@
                 <p>
                     Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per
                     raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e
-                    supportocontinui.
+                    supporto continui.
                 </p>
 
                 <div class="button partner-button">
@@ -441,7 +455,7 @@
 
         </div>
 
-
+        <!--card-section-->
         <div class="cards-container">
 
             <h2>Esegui piu operazioni con Dropbox Business</h2>
@@ -556,8 +570,8 @@
 
     </div>
 
-
-    <div class="test-container flex-box">
+    <!--square section-->
+    <div class="square-container flex-box">
 
         <div class="square flex-box">
 
@@ -587,8 +601,9 @@
 
             <p>
                 "I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte
-                soluzioni sono compatibili con queste esigenze, ma nessuna e facile quanto Dropbox e Dropbox Paper. Ora
-                molte soluzioni sono compatibili con queste esigenze,ma nessuna e facile quanto Dropbox Paper".
+                soluzioni sono compatibili con queste esigenze, ma nessuna &#232 facile quanto Dropbox e Dropbox Paper.
+                Ora
+                molte soluzioni sono compatibili con queste esigenze,ma nessuna &#232 facile quanto Dropbox Paper".
             </p>
 
             <span>Morten Thomsen, Global IT Lead</span>
@@ -633,20 +648,22 @@
 
     </div>
 
-
+    <!--question-section-->
     <div class="main-container">
 
         <h2>Domande frequenti</h2>
 
         <div class="questions-box">
             <div class="questions-items flex-box">
-                <h4>Qual'e la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+                <h4>Qual'&#232 la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
                 <i class="fa-solid fa-angle-down"></i>
             </div>
             <div class="questions-hidden">
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis velit ab impedit ad reprehenderit
-                    nisi culpa ipsam debitis, voluptate quia molestias tenetur libero unde nam numquam a et obcaecati
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis velit ab impedit ad
+                    reprehenderit
+                    nisi culpa ipsam debitis, voluptate quia molestias tenetur libero unde nam numquam a et
+                    obcaecati
                     eligendi.
                 </p>
             </div>
@@ -654,13 +671,15 @@
 
         <div class="questions-box">
             <div class="questions-items flex-box">
-                <h4>Qual'e la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+                <h4>Qual'&#232 la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
                 <i class="fa-solid fa-angle-down"></i>
             </div>
             <div class="questions-hidden">
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis velit ab impedit ad reprehenderit
-                    nisi culpa ipsam debitis, voluptate quia molestias tenetur libero unde nam numquam a et obcaecati
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis velit ab impedit ad
+                    reprehenderit
+                    nisi culpa ipsam debitis, voluptate quia molestias tenetur libero unde nam numquam a et
+                    obcaecati
                     eligendi.
                 </p>
             </div>
@@ -668,13 +687,15 @@
 
         <div class="questions-box last">
             <div class="questions-items flex-box">
-                <h4>Qual'e la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+                <h4>Qual'&#232 la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
                 <i class="fa-solid fa-angle-down"></i>
             </div>
             <div class="questions-hidden">
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis velit ab impedit ad reprehenderit
-                    nisi culpa ipsam debitis, voluptate quia molestias tenetur libero unde nam numquam a et obcaecati
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis velit ab impedit ad
+                    reprehenderit
+                    nisi culpa ipsam debitis, voluptate quia molestias tenetur libero unde nam numquam a et
+                    obcaecati
                     eligendi.
                 </p>
             </div>
@@ -683,10 +704,12 @@
     </div>
 
 
+    <!--footer-->
     <div class="footer">
 
         <div class="footer-box">
 
+            <!--footer-menu-col-->
             <div class="footer-container flex-box">
 
                 <div class="footer-col">
@@ -694,7 +717,7 @@
 
                     <ul>
                         <li>Applicazione desktop</li>
-                        <li>Perche Dropbox</li>
+                        <li>Perch&#232 Dropbox</li>
                         <li>Piani</li>
                         <li>Sicurezza</li>
                         <li>Funzioni</li>
@@ -707,7 +730,7 @@
 
                     <ul>
                         <li>Applicazione desktop</li>
-                        <li>Perche Dropbox</li>
+                        <li>Perch&#232 Dropbox</li>
                         <li>Piani</li>
                         <li>Sicurezza</li>
                         <li>Funzioni</li>
@@ -720,7 +743,7 @@
 
                     <ul>
                         <li>Applicazione desktop</li>
-                        <li>Perche Dropbox</li>
+                        <li>Perch&#232 Dropbox</li>
                         <li>Piani</li>
                         <li>Sicurezza</li>
                         <li>Funzioni</li>
@@ -733,7 +756,7 @@
 
                     <ul>
                         <li>Applicazione desktop</li>
-                        <li>Perche Dropbox</li>
+                        <li>Perch&#232 Dropbox</li>
                         <li>Piani</li>
                         <li>Sicurezza</li>
                         <li>Funzioni</li>
@@ -746,7 +769,7 @@
 
                     <ul>
                         <li>Applicazione desktop</li>
-                        <li>Perche Dropbox</li>
+                        <li>Perch&#232 Dropbox</li>
                         <li>Piani</li>
                         <li>Sicurezza</li>
                         <li>Funzioni</li>
@@ -756,6 +779,8 @@
 
             </div>
 
+
+            <!--footer-icons/language-->
             <div class="footer-icons flex-box">
 
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
