--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         </div>
                     </li>
                     <li>Contatta l'ufficio vendite</li>
-                    <li>Accedi</li>
+                    <li><a href="./pages/sing-up.html">Accedi</a></li>
                 </ul>
                 <div class="button small-button">
                     <a href="#">Inizia</a>
