--- a/pages/sing-up.html
+++ b/pages/sing-up.html
@@ -16,6 +16,8 @@
 
 <body>
 
+
+    <!--navbar-->
     <div class="navbar">
 
         <div class="navbar-box flex-box">
@@ -36,7 +38,7 @@
 
     </div>
 
-
+    <!--sing-up-section-->
     <div class="sing-up-container flex-box">
 
         <div class="sing-up-image">
@@ -98,7 +100,7 @@
     </div>
 
 
-
+    <!--footer-->
     <div class="footer">
         <div class="footer-box flex-box">
             <div class="footer-col">
